--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,9 @@ spring:
       use-new-id-generator-mappings: false
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
+        highlight_sql: true
 logging:
   pattern:
     console: "[%d{HH:mm:ss.SSS}][%-5level][%logger.%method:line%line] - %msg%n"
