--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ logging:
   pattern:
     console: "[%d{HH:mm:ss.SSS}][%-5level][%logger.%method:line%line] - %msg%n"
   level:
-    org.hibernate:
-      type.descriptor.sql: trace
-      SQL: debug
+    org:
+      hibernate:
+        type.descriptor.sql: trace
+        SQL: debug
