--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/study
-    username: study
-    password: study123
+    username: root
+    password: 1234
   jpa:
     open-in-view: true
     hibernate:
